Refactoring and Random Figure

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <link rel="shortcut icon" href="#">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
+  <script src="./lib/p5.js"></script>
+  <script src="./lib/p5.sound.min.js"></script>
   <meta charset="utf-8" />
   <style>
     body {
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <script src="p5Shapes.js"></script>
+  <script src="Sketches/circlePointsSketch.js"></script>
 </body>
 
 </html>
