--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     window.setup = setup;
     window.draw = draw;
   </script>
+  <!--<script type="module">
+    import { setup, draw } from "./Sketches/UlamSpiral/spiralSketch.js";
+    window.setup = setup;
+    window.draw = draw;
+  </script>-->
 </body>
 
 </html>
