npm library included

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 </head>
 
 <body>
-  <!--<script src="Sketches/circlePointsSketch.js"></script>-->
+  <!--<script type="module">
+    import { setup, draw, preload } from "./Sketches/Cardioid/cardioidSketch.js";
+    window.setup = setup;
+    window.draw = draw;
+    window.preload = preload;
+  </script>-->
   <!--<script src="Sketches/LiquidDiffusion/drawLiquidDiffusion.js"></script>-->
   <script type="module">
     import { setup, draw } from "./Sketches/Maze/drawMaze.js";
